2009-02-12  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Fixed <rdar://problem/6582048>.

        * wtf/RandomNumber.cpp:
        (WTF::randomNumber): Make only one call to the random number generator
        on platforms where the generator is cryptographically secure. The value
        of randomness over and above cryptographically secure randomness is not
        clear, and it caused some performance problems.

2009-02-12  Adam Roben  <aroben@apple.com>

        Fix lots of Perl warnings when building JavaScriptCoreGenerated on
        Windows

        Reviewed by John Sullivan.

        * JavaScriptCore.vcproj/JavaScriptCore/build-generated-files.sh:
        Create the docs/ directory so that we can write bytecode.html into it.
        This matches what JavaScriptCore.xcodeproj does.

2009-02-12  Simon Hausmann  <simon.hausmann@nokia.com>

        Rubber-stamped by Lars.

        Re-enable the JIT in the Qt build with -fno-stack-protector on Linux.

        * JavaScriptCore.pri:

2009-02-11  Dmitry Titov  <dimich@chromium.org>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=23705
        Fix the UI freeze caused by Worker generating a flood of messages.
        Measure time we spend in executing posted work items. If too much time is spent
        without returning to the run loop, exit and reschedule.

        * wtf/MainThread.h:
        Added initializeMainThreadPlatform() to initialize low-level mechanism for posting
        work items from thread to thread. This removes #ifdefs for WIN and CHROMIUM from platform-independent code.

        * wtf/MainThread.cpp:
        (WTF::initializeMainThread):
        (WTF::dispatchFunctionsFromMainThread):
        Instead of dispatching all work items in the queue, dispatch them one by one
        and measure elapsed time. After a threshold, reschedule and quit.

        (WTF::callOnMainThread):
        (WTF::callOnMainThreadAndWait):