@@ -1,5 +1,12 @@
 2009-02-12  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix.
+
+        * wtf/RandomNumber.cpp:
+        (WTF::randomNumber):
+
+2009-02-12  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Sam Weinig.
         
         Fixed <rdar://problem/6582048>.
